47/nohup.out
  File "facts.py", line 348
    res = randOpt(factors, FactorStrategy, times = 20000)
    ^
IndentationError: unexpected indent
  File "facts.py", line 348
    res = randOpt(factors, FactorStrategy, times = 20000)
    ^
IndentationError: unexpected indent
